--- a/2.starting-react/index.html
+++ b/2.starting-react/index.html
@@ -14,6 +14,7 @@
 
     <script>
         const heading = React.createElement('h1',{},"Hello from React");
+        //empty {} is used to write attributes {id : 'heading'}
         const root = ReactDOM.createRoot(document.getElementById('root'))
         root.render(heading)
     </script>
